[project]
name = "CHaRM"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "addict==2.4.0",
    "easydict==1.13",
    "hydra-colorlog==1.2.0",
    "hydra-core==1.3.2",
    "lightning==2.4.0",
    "mlflow==2.10.2",
    "numpy==1.26.4",
    "opencv-python==4.10.0.84",
    "openpyxl==3.1.4",
    "plyfile==1.0.3",
    "rich==13.7.1",
    "rootutils==1.0.7",
    "timm==1.0.8",
    "torch==2.7.1",
    "treelib==1.7.0",
    "vedo==2024.5.2",
]
